調整nav定位跟連結

--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,6 @@ p{
     font-size: 24px;
     line-height: 36px;
 }
-.p-sm{
-    font-size: 16px;
-    line-height: 24px;
-}
 .container{
     max-width: 1296px;
     margin: 0 auto;
@@ -58,6 +54,9 @@ p{
 nav{
     background: #000;
     color: #D1D1D1;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 nav ul{
     display: flex;
