--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@ body{
     font-family: 'Bruno Ace SC', cursive;
     /* font-family: 'Castoro Titling', cursive; */
 
-    font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
 }
 .material-symbols-outlined{
     vertical-align:bottom;
@@ -31,18 +30,15 @@ img{
 }
 h1{
     font-size: 128px;
-    line-height: 192px;
     color: #00FFA3;
     text-align: right;
 }
 h2{
     font-size: 64px;
-    line-height: 96px;
     color: inherit;
 }
 p{
     font-size: 24px;
-    line-height: 36px;
 }
 .container{
     max-width: 1296px;
@@ -137,6 +133,10 @@ header .container{
     flex-wrap: wrap;
     justify-content: flex-start;
     align-content: center;
+
+    list-style: decimal-leading-zero;
+    list-style-position:inside;
+    font-size: 20px;
 }
 .card{
     border: 1px solid #E3E3E3;
@@ -145,12 +145,8 @@ header .container{
     margin: 12px;
     max-width: 306px;
 }
-.card-title{
-    font-size: 20px;
-    line-height: 30px;
-}
 .card p{
-    font: inherit;
+    font-size: 16px;
     margin-top: 4px;
 }
 .about .info{
@@ -178,34 +174,12 @@ header .container{
     align-items: center;
     gap: 20px;
 }
-.icon-group a{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
 .icon-group li{
     width: 162px;
-    height: 162px;
     border-radius: 40px;
-    overflow: hidden;
-    position: relative;
+    /* overflow: hidden; */
 
     transition: 0.5s;
-}
-/* discord */
-.icon-group li:first-of-type{
-    background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/discord.png?raw=true");
-    background-position: center;
-}
-/* ig */
-.icon-group li:nth-of-type(2){
-    background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/instagram.png?raw=true");
-    background-position: left -4px top -4px;
-}
-/* message */
-.icon-group li:nth-of-type(3){
-    background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/message.png?raw=true");
-    background-position: left -4px top -4px;
 }
 .icon-group li:hover{
     box-shadow: 0px 0px 16px 3px #9094FFE5;
@@ -270,6 +244,5 @@ footer{
     text-align: center;
     padding: 40px 0;
     font-size: 16px;
-    line-height: 24px;
 }
 
